Source/WebCore/platform/audio/ios/AudioDestinationIOS.h
@@ -65,6 +65,9 @@ private:
     AudioUnit m_outputUnit;
     AudioIOCallback& m_callback;
     RefPtr<AudioBus> m_renderBus;
+    RefPtr<AudioBus> m_spareBus;
+    unsigned m_firstSpareFrame { 0 };
+    unsigned m_lastSpareFrame { 0 };
 
     double m_sampleRate;
     bool m_isPlaying;
